// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentList > Comment form > should render form submit server error 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 2 comments
    </button>
    <div
      class="_inputContainer_cdc6cf"
    >
      <div
        class="_loader_cdc6cf"
      />
    </div>
  </div>
  ,
</div>
`;

exports[`CommentList > Comment form > should render loading 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 2 comments
    </button>
    <div
      class="_inputContainer_cdc6cf"
    >
      <div
        class="_loader_cdc6cf"
      />
    </div>
  </div>
  ,
</div>
`;

exports[`CommentList > should hide 1 comment 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 1 comment
    </button>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
  ,
</div>
`;

exports[`CommentList > should hide comments 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 2 comments
    </button>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
  ,
</div>
`;

exports[`CommentList > should render 1 comment 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 1 comment
    </button>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`CommentList > should render comments 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      View 2 comments
    </button>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`CommentList > should render no comment 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`CommentList > should show 1 comment 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      Hide comment
    </button>
    <div
      class="_Comment_472ec0"
    >
      <a
        href="/profile_id1"
      >
        foo bar
      </a>
      <br />
      good post
    </div>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`CommentList > should show comments 1`] = `
<div>
  <div
    class="_CommentList_cdc6cf"
  >
    <button>
      Hide comments
    </button>
    <div
      class="_Comment_472ec0"
    >
      <a
        href="/profile_id1"
      >
        foo bar
      </a>
      <br />
      good post
    </div>
    <div
      class="_Comment_472ec0"
    >
      <a
        href="/profile_id1"
      >
        foo bar
      </a>
      <br />
      good post
    </div>
    <div
      class="_formContainer_cdc6cf"
    >
      <form
        action=""
        method="post"
      >
        <div
          class="_inputContainer_cdc6cf"
        >
          <input
            id="comment"
            name="comment"
            placeholder="Add a comment..."
            type="text"
            value=""
          />
        </div>
      </form>
    </div>
  </div>
  ,
</div>
`;
